--- a/style.css
+++ b/style.css
@@ -5,3 +5,92 @@
     margin: 0;
     padding: 0;
 }
+
+/*GENERAL*/
+body{
+    font-family: 'Gothic A1', sans-serif;
+    color: #fffdd8;
+}
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Hammersmith One', sans-serif;
+}
+ul {
+    list-style-type: none;
+    display: flex;
+}
+/*NAV*/
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #0CAD93;
+    height: 60px;
+    padding-left: 30px;
+    padding-right: 20px;
+    width: 100vw;
+    position: fixed;
+}
+
+nav img {
+    width: 50px;
+}
+nav ul {
+    gap: 5px;
+    font-family: 'Hammersmith One', sans-serif;
+    height: 100%;
+}
+nav ul li {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 1px;
+    font-size: 15px;
+    padding: 0 10px;
+    cursor: pointer;
+    transition: all 300ms;
+}
+nav button {
+    padding: 10px 30px;
+    border-radius: 20px;
+    font-family: 'Hammersmith One', sans-serif;
+    color: #fffdd8;
+    background: transparent;
+    border: 2px solid #fffdd8;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-left: 10px;
+    transition: all 300ms;
+}
+
+nav button:hover {
+    background: #0ca289;
+}
+
+nav img {
+    cursor: pointer;
+    margin-left: 150px;
+}
+nav div {
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+nav ul li:hover {
+    background-color: #0ca289;
+}
+
+.active-page {
+    box-shadow: inset 0px -2px #fffdd8;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+/*SECTION 1*/
+section {
+    height: 100vh;
+    background: #0ac3a7;
+}
